--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.6.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-cssfx-loading": "^1.0.3",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
